--- a/main.css
+++ b/main.css
@@ -5,21 +5,26 @@ body {
 }
 
 h1 {
-    font-family: 'Carter One',cursive;
-    color: white;
+    font-family: 'Bungee Shade',cursive;
+    color: black;
     text-align: center;
-    font-size: 42px;
+    font-size: 22px;
+    line-height: 30px;
     margin-top: 10px;
 }
 
 
 h2 {
-    font-family: 'Carter One',cursive;
+    font-family: 'Bungee Shade',cursive;
     color: black;
     margin-top: 0px;
     
 }
 
+.red {
+    color: red;
+    background: white;
+}
 
 
 .album {
@@ -152,20 +157,22 @@ p+p+p {
 
 
 .header {
-  background-color: black;
-  padding: 10px 10px 10px 10px;
-  height: 80px;
+    background-color: white;
+    top: 0px;
+    padding: 10px 10px 10px 10px;
+    height: 100px;
+    width: 100%;
+    position: fixed;
 }
 
 
 .header a{
-  font-family: 'Carter One';
+  font-family: 'Bungee Shade';
   float: center;
-  color:white;
+  color:black;
   text-align: center;
   padding: 12px;
   font-size: 18px; 
-  line-height: 12px;
   border-radius: 2px;
 }
 
@@ -185,8 +192,8 @@ p+p+p {
 }
 
 .header a:hover {
-  background-color: white;
-  color: black;
+  background-color: red;
+  color: white;
   text-decoration: none;
 }
 
